--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -3,13 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <!-- <style>
         body{
        background-color: bisque;
    background-size:cover;
    height: 100vh;
    }
-   </style>
+   </style> -->
+   <%- include("./partials/files.ejs") %>
 </head>
 <body>
     <div class="main">
@@ -20,9 +21,10 @@
             <label> director<br><input type="text" name="director" value="<%=onemovie.director%>"/></label><br>
             <label>type<br><input type="text" name="type"  value="<%=onemovie.type%>" /></label><br>
             <label>rating<br><input type="number" name="rating" value="<%=onemovie.rating%>"/></label><br>
+            <label>image<br><input type="text" name="image" value="<%=onemovie.image%>" /></label><br>
             <div>
-                <input class="submits"type="submit"  value="Edit"/>
-                <a href="/movie"><button>Home Page</button></a>
+                <input class="btn btn-outline-primary" type="submit"  value="Edit"/>
+                <a href="/movie"><button class="btn btn-outline-primary">Home Page</button></a>
             </div>
         </form>
     </div>
