--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,21 @@ body{
     grid-gap: 10px;
 }
 .mainimg img{
-    width: 100%;
-    height: 25rem;
+    width: 90%;
+    height: 28rem;
     
 }
+
+
+
+@media (max-width: 767px) {
+    .mainimg{ justify-content: center;
+        overflow-y: scroll;
+        display: block;
+    }
+    .indexImg{
+        height: 300px;
+    }
+}
+
+    
