--- a/views/new.ejs
+++ b/views/new.ejs
@@ -18,14 +18,14 @@
 <body>
     <a href="/movie"><button class="btn btn-outline-primary">Home Page</button></a>
     <h1 style="text-align: center; color: aliceblue;">Create a New movie</h1>
-    <div style="display: flex; justify-content: center;">
+    <div style="display: flex; justify-content: center; color: white;">
         <form method="post" action="/movie" >
-            <label>title<br><input type="text" name="title" /></label><br>
-            <label>releaseDate<br><input type="text" name="releaseDate" /></label><br>
-            <label> director<br><input type="text" name="director" /></label><br>
-            <label>type<br><input type="text" name="type" /></label><br>
-            <label>rating<br><input type="number" name="rating" /></label><br>
-            <label>image<br><input type="text" name="image" /></label><br>
+            <label>Title<br><input type="text" name="title" /></label><br>
+            <label>ReleaseDate<br><input type="text" name="releaseDate" /></label><br>
+            <label> Director<br><input type="text" name="director" /></label><br>
+            <label>Type<br><input type="text" name="type" /></label><br>
+            <label>Rating<br><input type="number" name="rating" /></label><br>
+            <label>Image<br><input type="text" name="image" /></label><br>
             <div>
                 <input class= "btn btn-outline-primary" type="submit"  value="Add movie"/>  
             </div>
