--- a/views/show.ejs
+++ b/views/show.ejs
@@ -24,9 +24,9 @@
            
         </div>
         <h2 style="color: aliceblue; text-align: center;"> <%=onemovie.title %></h2>
-        <img style=" display: flex; margin: 0 auto; height: 600px; " src="<%=onemovie.image %>" alt="image"> 
+        <img class="ima" style=" display: flex; margin: 0 auto; height: 600px; " src="<%=onemovie.image %>" alt="image"> 
        
-       <div style="display: flex; margin-left: 230px; color: aliceblue; ">  
+       <div class="concept" style="display: flex; margin-left: 230px; color: aliceblue; ">  
              <div> 
                 <h4>releaseDate: <%=onemovie.releaseDate%></h4>
                 <h4>director: <%=onemovie.director%></h4>
